--- a/package.json
+++ b/package.json
@@ -2,14 +2,26 @@
   "name": "vue-class-to-vue3-cli",
   "version": "1.0.9",
   "type": "module",
-  "description": "",
+  "description": "A script to convert your Vue class components to <script setup>  ",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "keywords": [
+    "vue"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kanade-Lu/vue-class-to-script-setup.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kanade-Lu/vue-class-to-script-setup/issues"
+  },
+  "homepage": "https://github.com/Kanade-Lu/vue-class-to-script-setup#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "esno src/index.ts",
     "buildRun": "npm run build && esno bin/cli.js",
-    "build": "tsup src/*.ts src/core/*.ts --format esm,cjs --dts --clean"
+    "build": "tsup src/*.ts src/core/*.ts --format esm,cjs --dts --clean",
+    "release": "bumpp && npm publish"
   },
   "bin": {
     "vue-class-to-vue3": "bin/cli.js"
@@ -33,6 +45,7 @@
     "@types/babel__traverse": "^7.18.5",
     "@types/node": "^18.11.18",
     "@types/prompts": "latest",
+    "bumpp": "^9.1.0",
     "esno": "^0.16.3",
     "log-symbols": "^5.1.0",
     "tsup": "6.5.0"
