--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-class-to-vue3-cli",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "type": "module",
   "description": "A script to convert your Vue class components to <script setup>  ",
   "main": "dist/index.js",
@@ -21,6 +21,7 @@
     "dev": "esno src/index.ts",
     "buildRun": "npm run build && esno bin/cli.js",
     "build": "tsup src/*.ts src/core/*.ts --format esm,cjs --dts --clean",
+    "bumpp": "bumpp",
     "release": "bumpp && npm publish"
   },
   "bin": {
