--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "esm": true
   },
   "include": [
-    "src/**/*.ts", "src/core/options.js", "src/core/options.js", "src/core/options-traverse.js", "src/core/options-traverse.js",
+    "src/**/*.ts", "src/core/options.js", "src/core/options.js", "src/core/options-traverse.js", "src/core/options-traverse.js", "src/core/options-ts.traverse.js",
   ],
   "exclude": [
     "node_modules"
